:lipstick: Always force scrollbar to prevent shifting content when small post

--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -6,6 +6,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 62.5%;
+  overflow-y: scroll;
 }
 
 *,
